# clip-image-search-cli

./: .gitignore  CLI.py  Embeddings.py  ReadMe.md  all_embeddings.pt  pyproject.toml  test.py
gva_cli/: DB.py  NewEmbeddings.py  cli.py  embeddings.py  index.db  test.py
gva_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gva_cli/FileTraversal/: Makefile  db.c  db.h  hash.py  imageOpen.c  main.c  python_middleware.c  python_middleware.h  setWallpaper.c  test  test.c  traverse.c  traverse.h
